--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="/CSS/styles.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
@@ -29,37 +32,73 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l8 s12">
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="https://lh3.googleusercontent.com/pw/AP1GczMHPsi-Crw361G0_2AYxwASRb0d-UP8Xn6y1N9jWq6NSvBkGa_UHGGRqGnz4hU4fx7vYUKJL80_kC4G1x3rZ6PSNYQjp02y-oqSgam6MmGUfN9YZx_SfpBWVIwo_X3XafTwm_-p1-G0jE9w2upqfVgHzw=w1190-h1580-s-no-gm?authuser=0" alt="Nature" style="width:100%">
-    <div class="w3-container">
-      <h3><b>Attention Wildcats!</b></h3>
-      <!-- <h5>Party date: <span class="w3-opacity">Feb 8th, 2025</span></h5> -->
-    </div>
-
-    <div class="w3-container">
-      <p>Get your head in the game and mark your calendars for the ultimate audition of the year — Rafa’s 35th birthday party!</p>
-      <div class="w3-row">
-        <div class="w3-col m8 s12">
-          <!-- <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p> -->
-        </div>
+    <div class="w3-container flex-container">
+      <!-- Left Div -->
+      <div class="left-content">
+        <img src="https://lh3.googleusercontent.com/pw/AP1GczMHPsi-Crw361G0_2AYxwASRb0d-UP8Xn6y1N9jWq6NSvBkGa_UHGGRqGnz4hU4fx7vYUKJL80_kC4G1x3rZ6PSNYQjp02y-oqSgam6MmGUfN9YZx_SfpBWVIwo_X3XafTwm_-p1-G0jE9w2upqfVgHzw=w1190-h1580-s-no-gm?authuser=0" alt="Milo and Luca">
+      </div>
+      <!-- Right Div -->
+      <div class="right-content">
+        <h3><b>Attention Wildcats!</b></h3>
+        <p>Get your head in the game and mark your calendars for the ultimate audition of the year — Rafa’s 35th birthday party!</p>
       </div>
     </div>
   </div>
+  
+  
   <hr>
 
   <!-- Blog entry -->
-  <div class="w3-card-4 w3-margin w3-white">
-  <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
-    <div class="w3-container">
-      <h3><b>GET READY YOURSELF</b></h3>
-      <h5>Party date: <span class="w3-opacity">Feb 8th, 2025</span></h5>
-    </div>
-
-    <div class="w3-container">
-      <p>That’s right, on February 9th, Rafa is turning the big 3-5, and we’re kicking off the auditions (ahem, festivities) a day early on February 8th. Why settle for one performance when you can have a two-day musical extravaganza?</p>
-      <div class="w3-row">
-        <div class="w3-col m4 w3-hide-small">
-          <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
+  <div class="w3-card-4 w3-margin w3-white flex-container">
+    <!-- Text on the Left -->
+    <div class="left-content">
+      <div class="w3-container">
+        <h3><b>GET READY YOURSELF</b></h3>
+        <h5>Party date: <span class="w3-opacity">Feb 8th, 2025</span></h5>
+      </div>
+  
+      <div class="w3-container">
+        <p>Auditions start February 8th and continue until the big day, February 9th.</p>
+        <div class="w3-row">
+          <div class="w3-col m4 w3-hide-small">
+            <!-- Placeholder for additional content if needed -->
+          </div>
         </div>
+      </div>
+    </div>
+  
+    <!-- Carousel on the Right -->
+    <div class="right-content">
+      <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
+        <!-- Indicators -->
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+  
+        <!-- Carousel Items -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://lh3.googleusercontent.com/pw/AP1GczOwWVTsbs-QoOU0ouNGUekMcNcQysa1ZZizUU9Q3siH4_Ct5Li2SxNCWvIWkd_hdBBMRkOSk9CfI24Rj5bn0LbUiKS6TTtTfoESS1KprEcAI7-pQnM1vw4Zu95FtwW69PtBSgmlJknyOe6WJvlOcXHdOw=w1192-h1582-s-no-gm?authuser=0" class="d-block w-100" alt="Elevator">
+          </div>
+          <div class="carousel-item">
+            <img src="https://lh3.googleusercontent.com/pw/AP1GczOIkg1-ZthBAIZ-qLX6VIgH294iaz8EXVMy9Owr9V3AHMNJZepzU5nitRiSkmJDFn51xUo_D62hH2R6JQl2fS8WdL1zMOs_ZS05M6rj_QrKGOCA4pvM3KCSkgISQSIoJP-xG8QEKBhPk-gs_tDbcW-EJw=w1192-h1582-s-no-gm?authuser=0" class="d-block w-100" alt="Mario">
+          </div>
+          <div class="carousel-item">
+            <img src="https://lh3.googleusercontent.com/pw/AP1GczNd8EqBrHh0hDnyt-Y5u7fF6E3-NVmnPINKvyhU2HpXDaEpHHmfvoL4ANgZQwML5Mb6FSm5qmcwlbZdujfQ2-Q2Z9cUYgaWb6534xT8FPjgpX1LUNCMpUBqK1kBAeYp_xT7XfnTkd_dkeL0viAJCITupA=w1192-h1582-s-no-gm?authuser=0" class="d-block w-100" alt="NYC">
+          </div>
+        </div>
+  
+        <!-- Controls -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
   </div>
@@ -72,55 +111,36 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-card w3-margin w3-margin-top">
   <img src="/w3images/avatar_g.jpg" style="width:100%">
     <div class="w3-container w3-white">
-      <h4><b>My Name</b></h4>
-      <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
+      <h4><b>Location</b></h4>
+      <p>Show off your karaoke skills, ace the "exams," and bring your best moves to this two-day extravaganza.</p>
     </div>
   </div><hr>
   
   <!-- Posts -->
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding">
-      <h4>Popular Posts</h4>
+      <h4>This is what you need to know</h4>
     </div>
     <ul class="w3-ul w3-hoverable w3-white">
-      <li class="w3-padding-16">
-        <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Lorem</span><br>
-        <span>Sed mattis nunc</span>
-      </li>
-      <li class="w3-padding-16">
-        <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Ipsum</span><br>
-        <span>Praes tinci sed</span>
-      </li> 
-      <li class="w3-padding-16">
-        <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Dorum</span><br>
-        <span>Ultricies congue</span>
-      </li>   
-      <li class="w3-padding-16 w3-hide-medium w3-hide-small">
-        <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-        <span class="w3-large">Mingsum</span><br>
-        <span>Lorem ipsum dipsum</span>
-      </li>  
+        <li class="w3-padding-16">
+            <img src="/Icons/rsvp.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <span class="w3-large">RSVP</span><br>
+            <span>Confirm assistene here</span>
+          </li>
+          <li class="w3-padding-16">
+            <img src="/Icons/spotify.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <span class="w3-large">Music</span><br>
+            <span>Add your must-play song!</span>
+          </li>  
+        <li class="w3-padding-16">
+            <img src="/Icons/picture.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <span class="w3-large">Pictures</span><br>
+            <span>Share the pictures you took in the party</span>
+        </li>   
     </ul>
   </div>
   <hr> 
  
-  <!-- Labels / tags -->
-  <div class="w3-card w3-margin">
-    <div class="w3-container w3-padding">
-      <h4>Tags</h4>
-    </div>
-    <div class="w3-container w3-white">
-    <p><span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
-      <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
-    </p>
-    </div>
-  </div>
   
 <!-- END Introduction Menu -->
 </div>
@@ -133,9 +153,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Footer -->
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-  <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
-  <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <p>You get lost? <a href="tel:+17786807893" target="_blank">Call me</a></p>
 </footer>
 
 </body>
