--- a/index.html
+++ b/index.html
@@ -123,17 +123,17 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
     <ul class="w3-ul w3-hoverable w3-white">
         <li class="w3-padding-16">
-            <img src="/Icons/rsvp.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <img src="/rsvp.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">RSVP</span><br>
             <span>Confirm assistene here</span>
           </li>
           <li class="w3-padding-16">
-            <img src="/Icons/spotify.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <img src="/spotify.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Music</span><br>
             <span>Add your must-play song!</span>
           </li>  
         <li class="w3-padding-16">
-            <img src="/Icons/picture.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+            <img src="/picture.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Pictures</span><br>
             <span>Share the pictures you took in the party</span>
         </li>   
