--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Rafa's Birthday Party</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -112,7 +112,8 @@ and is wrapped around the whole page content, except for the footer in this exam
   <img src="/w3images/avatar_g.jpg" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>Location</b></h4>
-      <p>Show off your karaoke skills, ace the "exams," and bring your best moves to this two-day extravaganza.</p>
+      <p>Show off your karaoke skills, ace the 'exams', and bring your best moves to this two-day extravaganza.
+    </p>
     </div>
   </div><hr>
   
@@ -125,7 +126,7 @@ and is wrapped around the whole page content, except for the footer in this exam
         <li class="w3-padding-16">
             <img src="rsvp.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">RSVP</span><br>
-            <span>Confirm assistene here</span>
+            <span>Confirm attendance here</span>
           </li>
           <li class="w3-padding-16">
             <img src="spotify.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
@@ -153,7 +154,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Footer -->
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-  <p>You get lost? <a href="tel:+17786807893" target="_blank">Call me</a></p>
+    <p>Lost? <a href="tel:+17786807893" target="_blank">Call me</a></p>
 </footer>
 
 </body>
