--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="rafaParty.js"></script>
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
@@ -20,9 +21,9 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-content" style="max-width:1400px">
 
 <!-- Header -->
-<header class="w3-container w3-center w3-padding-32"> 
-  <h1><b>Rafa's Birthday Party</b></h1>
-  <p>You are invited <span class="w3-tag">unknown</span></p>
+<header class="w3-container w3-center w3-padding-32 neons"> 
+  <h1><b>Rafa's </br>Birthday </br>Party</b></h1>
+  <p>You are invited </p>
 </header>
 
 <!-- Grid -->
@@ -39,7 +40,8 @@ and is wrapped around the whole page content, except for the footer in this exam
       </div>
       <!-- Right Div -->
       <div class="right-content">
-        <h3><b>Attention Wildcats!</b></h3>
+    </br>
+        <h3><b>Attention Banda!</b></h3></br>
         <p>Get your head in the game and mark your calendars for the ultimate audition of the year — Rafa’s 35th birthday party!</p>
       </div>
     </div>
@@ -53,10 +55,11 @@ and is wrapped around the whole page content, except for the footer in this exam
     <!-- Text on the Left -->
     <div class="left-content">
       <div class="w3-container">
-        <h3><b>GET READY YOURSELF</b></h3>
-        <h5>Party date: <span class="w3-opacity">Feb 8th, 2025</span></h5>
+    </br>
+        <h3><b>GET READY YOURSELF</b></h3></br>
+        <h5><span class="w3-opacity">Feb 8th, 2025 </br> 7:00 pm</span></h5>
       </div>
-  
+    </br>
       <div class="w3-container">
         <p>Auditions start February 8th and continue until the big day, February 9th.</p>
         <div class="w3-row">
@@ -109,12 +112,27 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l4">
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
-  <img src="/w3images/avatar_g.jpg" style="width:100%">
+  <img src="https://lh3.googleusercontent.com/pw/AP1GczMz6QblB7ZqSmX8vnorCRwI0E7nuJoH0CVDWGG9MfesnlVVJMhkRqy6BxrK0wSfs1R2X8lPzv58vG17ciXZjJpV4Ztr9sLBeAV8-BC5MJrBCtXSCDJp_JE9Fx7UgHxqMInobbqYckq3ArMS9Ms9sIgx3g=w2812-h1582-s-no-gm?authuser=0" style="width:100%">
     <div class="w3-container w3-white">
+    </br>
       <h4><b>Location</b></h4>
-      <p>Show off your karaoke skills, ace the 'exams', and bring your best moves to this two-day extravaganza.
-    </p>
+      <p>Show off your karaoke skills, ace the 'exams', and bring your best moves to this two-day extravaganza.</p>
+      <div class="w3-row">
+        <div class="w3-col m8 s12">
+          <p></p>
+        </div>
+        <div class="w3-col m4 w3-hide-small">
+            <p>
+                <span class="w3-padding-large w3-right" onclick="openMaps()">
+                  <b>Get directions</b>
+                  <img src="google-maps-icon.png" alt="Google Maps" class="google-maps-icon">
+                </span>
+              </p>
+              
+        </div>
+      </div>
     </div>
+    
   </div><hr>
   
   <!-- Posts -->
@@ -123,7 +141,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <h4>This is what you need to know</h4>
     </div>
     <ul class="w3-ul w3-hoverable w3-white">
-        <li class="w3-padding-16">
+        <li class="w3-padding-16" onclick="rsvp()">
             <img src="rsvp.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">RSVP</span><br>
             <span>Confirm attendance here</span>
@@ -133,7 +151,7 @@ and is wrapped around the whole page content, except for the footer in this exam
             <span class="w3-large">Music</span><br>
             <span>Add your must-play song!</span>
           </li>  
-        <li class="w3-padding-16">
+        <li class="w3-padding-16" onclick="pictures()">
             <img src="picture.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
             <span class="w3-large">Pictures</span><br>
             <span>Share the pictures you took in the party</span>
