--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white flex-container">
     <!-- Text on the Left -->
-    <div class="left-content">
+    <div class="left-content-picture">
       <div class="w3-container">
     </br>
         <h3><b>GET READY YOURSELF</b></h3></br>
@@ -71,7 +71,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
   
     <!-- Carousel on the Right -->
-    <div class="right-content">
+    <div class="right-content-pictures">
       <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
         <!-- Indicators -->
         <div class="carousel-indicators">
@@ -117,11 +117,10 @@ and is wrapped around the whole page content, except for the footer in this exam
     </br>
       <h4><b>Location</b></h4>
       <p>Show off your karaoke skills, ace the 'exams', and bring your best moves to this two-day extravaganza.</p>
+
+      <p class="address">159 Wellesley St E.</br> Unit 2806 </br> Toronto, ON</p>
       <div class="w3-row">
-        <div class="w3-col m8 s12">
-          <p></p>
-        </div>
-        <div class="w3-col m4 w3-hide-small">
+        <div class="w3-col m6">
             <p>
                 <span class="w3-padding-large w3-right" onclick="openMaps()">
                   <b>Get directions</b>
