--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@ and is wrapped around the whole page content, except for the footer in this exam
         <!-- Header -->
         <header class="w3-container w3-center w3-padding-32 neons">
             <h1><b>Rafa's </br>Birthday </br>Party</b></h1>
-            <p>You are invited </p>
+            <p class="invitation-text">You are invited </p>
         </header>
 
         <!-- Grid -->
         <div class="w3-row">
-
+            <div>
+                <iframe style="border-radius:0px" src="https://open.spotify.com/embed/track/5SiFApnWwtQfVSceqSPPQl?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
             <!-- Blog entries -->
             <div class="w3-col l8 s12">
                 <!-- Blog entry -->
-                <div class="w3-card-4 w3-margin w3-white">
+                <div class="w3-card-4 w3-margin w3-white cardParty">
                     <div class="w3-container flex-container">
                         <!-- Left Div -->
                         <div class="left-content">
@@ -62,13 +64,13 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <hr>
 
                 <!-- Blog entry -->
-                <div class="w3-card-4 w3-margin w3-white flex-container-picture">
+                <div class="w3-card-4 w3-margin w3-white flex-container-picture cardParty">
                     <!-- Text on the Left -->
                     <div class="left-content-picture">
                         <div class="w3-container">
                             <h3><b>GET READY YOURSELF</b></h3>
                             <h5><span class="w3-opacity">Feb 8th, 2025 <br> 7:00 pm</span></h5>
-                        </div>
+                        </div></br>
                         <div class="w3-container">
                             <p>Auditions start February 8th and continue until the big day, February 9th.</p>
                         </div>
@@ -109,7 +111,7 @@ and is wrapped around the whole page content, except for the footer in this exam
             <!-- Introduction menu -->
             <div class="w3-col l4">
                 <!-- About Card -->
-                <div class="w3-card w3-margin w3-margin-top">
+                <div class="w3-card w3-margin w3-margin-top cardParty">
                     <img src="https://lh3.googleusercontent.com/pw/AP1GczMz6QblB7ZqSmX8vnorCRwI0E7nuJoH0CVDWGG9MfesnlVVJMhkRqy6BxrK0wSfs1R2X8lPzv58vG17ciXZjJpV4Ztr9sLBeAV8-BC5MJrBCtXSCDJp_JE9Fx7UgHxqMInobbqYckq3ArMS9Ms9sIgx3g=w2812-h1582-s-no-gm?authuser=0"
                         style="width:100%">
                     <div class="w3-container w3-white">
@@ -136,7 +138,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                 <hr>
 
                 <!-- Posts -->
-                <div class="w3-card w3-margin">
+                <div class="w3-card w3-margin cardParty">
                     <div class="w3-container w3-padding">
                         <h4>This is what you need to know</h4>
                     </div>
