--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <p>Show off your karaoke skills, ace the 'exams', and bring your best moves to this two-day
                             extravaganza.</p>
 
-                        <p class="address">159 Wellesley St E.</br> Unit 2806 </br> Toronto, ON</p>
+                        <p class="address">159 Wellesley St E.</br> Unit 2806 </br> Toronto, ON </br> <b>Buzzer: 7893</b></p>
                         <div class="w3-row">
                             <div class="w3-col m6">
                                 <p>
