--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 
-<body >
+<body class="w3-white">
 
     <!-- w3-content defines a container for fixed size centered content, 
 and is wrapped around the whole page content, except for the footer in this example -->
