--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
 <head>
     <title>Rafa's Birthday Party</title>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Security-Policy"
+        content="script-src 'self' 'unsafe-inline' https://accounts.google.com https://apis.google.com https://www.gstatic.com https://cdn.jsdelivr.net;">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/api.js"></script>
+
+    <script src="jsonConnection.js"></script> <!-- Your script should come last -->
+
+
     <script src="rafaParty.js"></script>
     <style>
         body,
@@ -38,7 +47,11 @@ and is wrapped around the whole page content, except for the footer in this exam
         <!-- Grid -->
         <div class="w3-row">
             <div>
-                <iframe style="border-radius:0px" src="https://open.spotify.com/embed/track/5SiFApnWwtQfVSceqSPPQl?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:0px"
+                    src="https://open.spotify.com/embed/track/5SiFApnWwtQfVSceqSPPQl?utm_source=generator&theme=0"
+                    width="100%" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
             </div>
             <!-- Blog entries -->
             <div class="w3-col l8 s12">
@@ -75,7 +88,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                             <p>Auditions start February 8th and continue until the big day, February 9th.</p>
                         </div>
                     </div>
-                    
+
                     <!-- Carousel on the Right -->
                     <div class="right-content-pictures">
                         <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -93,17 +106,19 @@ and is wrapped around the whole page content, except for the footer in this exam
                                         class="d-block w-100" alt="NYC">
                                 </div>
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
+                            <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel"
+                                data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
                             </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
+                            <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel"
+                                data-bs-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
                     </div>
-                    
+
                 </div>
                 <!-- END BLOG ENTRIES -->
             </div>
@@ -120,7 +135,8 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <p>Show off your karaoke skills, ace the 'exams', and bring your best moves to this two-day
                             extravaganza.</p>
 
-                        <p class="address">159 Wellesley St E.</br> Unit 2806 </br> Toronto, ON </br> <b>Buzzer: 7893</b></p>
+                        <p class="address">159 Wellesley St E.</br> Unit 2806 </br> Toronto, ON </br> <b>Buzzer:
+                                7893</b></p>
                         <div class="w3-row">
                             <div class="w3-col m6">
                                 <p>
@@ -143,7 +159,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                         <h4>This is what you need to know</h4>
                     </div>
                     <ul class="w3-ul w3-hoverable w3-white">
-                        <li class="w3-padding-16" onclick="rsvp()">
+                        <li class="w3-padding-16" onclick="window.dialog.showModal();">
                             <img src="rsvp.png" alt="Image" class="w3-left w3-margin-right" style="width:50px">
                             <span class="w3-large">RSVP</span><br>
                             <span>Confirm attendance here</span>
@@ -159,6 +175,43 @@ and is wrapped around the whole page content, except for the footer in this exam
                             <span>Share the pictures you took in the party</span>
                         </li>
                     </ul>
+                    <dialog id="dialog">
+                        <h2>Confirm attendance</h2>
+
+                        <!-- Name Input -->
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+                        <div class="middleDiv">
+                            <div>
+                                <!-- Attendance Checkbox -->
+                                <label for="attendance">Will you attend?</label>
+                                <input type="checkbox" id="attendance" name="attendance">
+                            </div>
+                            <div>
+                                <!-- Color Picker -->
+                                <label for="color">Pick your favorite color:</label>
+                                <input type="color" id="color" name="color">
+                            </div>
+                        </div>
+                        <!-- Plus One Input -->
+                        <!-- <label for="plusOne">Plus One's Name:</label>
+                        <input type="text" id="plusOne" name="plusOne"> -->
+
+                        <!-- Submit Button -->
+                        <div class="buttons">
+                            <button type="submit" onclick="confirmAttendance()">Confirm</button>
+                            <button type="button" onclick="clearFormAndCloseDialog();">Cancel</button>
+                        </div>
+                        <button onclick="window.dialog.close();" aria-label="close" class="x">❌</button>
+                    </dialog>
+                </div>
+                <hr>
+
+                <div class="w3-card w3-margin cardParty">
+                    <div id="containerFlip">
+                        <div id="flip"></div>
+                        is coming!
+                      </div>                      
                 </div>
                 <hr>
 
