--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ and is wrapped around the whole page content, except for the footer in this exam
                 </div>
                 <hr>
 
-                <div class="w3-card w3-margin cardParty">
+                <div class=" w3-margin ">
                     <div id="containerFlip">
                         <div id="flip"></div>
                         is coming!
